# umamusume-anime

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.agents/skills/umamusume-video-pipeline/: SKILL.md
.agents/skills/umamusume-video-pipeline/agents/: openai.yaml
my-video/: .gitignore  README.md  package.json  pnpm-lock.yaml
my-video/src/: Root.tsx
my-video/src/components/: AIVideo.tsx  Background.tsx  OutlinedText.tsx  Subtitle.tsx  Word.tsx
my-video/src/lib/: constants.ts  subtitle-normalize.ts  subtitle-theme.ts  types.ts  utils.ts
my_tts/: README.md  __init__.py  cli.py
scripts/: audio_qc.py  background_catalog.json  director.py  download_backgrounds.py  render_4k60.py  render_4k60.sh  synthesize_script.py
tests/: test_audio_qc.py  test_director_incremental.py  test_director_subtitles.py  test_my_tts_fish_shutdown.py  test_my_tts_qwen_shutdown.py  test_render_4k60.py  test_synthesize_script_cli.py
